--- a/UserDefaults-are-fun/Base.lproj/Main.storyboard
+++ b/UserDefaults-are-fun/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="UserDefaults_are_fun" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,79 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xrh-UG-ekG">
+                                <rect key="frame" x="77.5" y="170" width="220" height="52"/>
+                                <color key="backgroundColor" red="0.93333333330000001" green="0.30196078430000001" blue="0.30196078430000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="52" id="Uok-uX-SgT"/>
+                                    <constraint firstAttribute="width" constant="220" id="awE-0Q-ibi"/>
+                                </constraints>
+                                <state key="normal" title="Red">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="red:" destination="BYZ-38-t0r" eventType="touchUpInside" id="JIz-OQ-zaG"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="caW-Fr-sNJ">
+                                <rect key="frame" x="77.5" y="230" width="220" height="52"/>
+                                <color key="backgroundColor" red="1" green="0.75686274509999996" blue="0.1137254902" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="52" id="56c-dG-F38"/>
+                                    <constraint firstAttribute="width" constant="220" id="ufk-sp-G5z"/>
+                                </constraints>
+                                <state key="normal" title="Yellow">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="yellow:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Q1a-4J-won"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8rq-Ns-dbM">
+                                <rect key="frame" x="77.5" y="290" width="220" height="52"/>
+                                <color key="backgroundColor" red="0.13691007650000001" green="0.45317814629999997" blue="0.75213616699999997" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="220" id="kbM-Yk-GP5"/>
+                                    <constraint firstAttribute="height" constant="52" id="klP-Ao-Uoh"/>
+                                </constraints>
+                                <state key="normal" title="Blue">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="blue:" destination="BYZ-38-t0r" eventType="touchUpInside" id="UQR-K1-1Jf"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Favorite Color: Blue" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xyJ-Lc-tOo">
+                                <rect key="frame" x="77" y="137" width="221" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="221" id="epu-MM-4k5"/>
+                                    <constraint firstAttribute="height" constant="25" id="hZQ-jy-ovO"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="xyJ-Lc-tOo" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="3ba-XW-Gzr"/>
+                            <constraint firstItem="caW-Fr-sNJ" firstAttribute="top" secondItem="Xrh-UG-ekG" secondAttribute="bottom" constant="8" id="AeG-Xi-ksu"/>
+                            <constraint firstItem="8rq-Ns-dbM" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="BnQ-sE-kyy"/>
+                            <constraint firstItem="xyJ-Lc-tOo" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="117" id="DXf-RH-ub0"/>
+                            <constraint firstItem="Xrh-UG-ekG" firstAttribute="top" secondItem="xyJ-Lc-tOo" secondAttribute="bottom" constant="8" id="Ql3-A1-TFS"/>
+                            <constraint firstItem="8rq-Ns-dbM" firstAttribute="top" secondItem="caW-Fr-sNJ" secondAttribute="bottom" constant="8" id="UhN-co-cgs"/>
+                            <constraint firstItem="Xrh-UG-ekG" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qwv-3k-dVJ"/>
+                            <constraint firstItem="caW-Fr-sNJ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="vLi-Zz-d7j"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="favLable" destination="xyJ-Lc-tOo" id="l99-dA-49r"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-79.200000000000003" y="138.98050974512745"/>
         </scene>
     </scenes>
 </document>
